[package]
name    = "ruc-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web   = "4"
env_logger  = "0.11"
log         = "0.4"
reqwest     = { version = "0.12.22", features = ["cookies", "json", "gzip"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
regex       = "1"
anyhow      = "1"
